fixing up spacing and adding contact section

--- a/app/assets/stylesheets/full.css.scss
+++ b/app/assets/stylesheets/full.css.scss
@@ -1,5 +1,6 @@
 @import "compass/css3/text-shadow";
 @import "compass/css3/images";
+@import "compass/css3/transition";
 
 $primary: #fff;
 $secondary: #AF3BD4;
@@ -23,7 +24,7 @@ h1, h2, h3 {
 h1 {
 	color: $primary;
 	font-size: 80px;
-	line-height: 80px;
+	line-height: 70px;
 }
 
 h2 { color: $secondary; }
@@ -36,11 +37,10 @@ ul, li {
 	padding: 0;	
 }
 
-.container { margin-top: 60px; }
+.container { margin-top: 40px; }
 
 .center {
 	margin: 0 auto;
-	padding-top: 15px;
 	width: 960px;
 }
 
@@ -58,7 +58,10 @@ header {
 
 	.sponsor {
 		float: right;
-		font-size: 15px;
+		font-size: 12px;
+		color:#999;
+		font-family: $family;
+		font-weight:700;
 	}
 	
 	.details {
@@ -82,11 +85,11 @@ div#floating-menu {
 
 	&.fixed{
 		float: right;
-		margin-top: 83px
+		
 	}
 	&.floating{
 		position: fixed;
-		top: 40px;	
+		top: 0px;	
 	}
 
 	.register-link{
@@ -115,7 +118,7 @@ div#floating-menu {
 		font-size:24px;
 		text-align:right;
 		list-style:none;
-
+		margin-top:10px;
 		li.current a { color:$secondary; }
 	}
 	a.sm_link {
@@ -155,12 +158,13 @@ span.divider{
 
 .page#holder{
 	p{
+
 		font-size:60px;
 		font-weight:700;
 		color:$secondary;
 		font-family: $family;
 		text-transform:uppercase;
-		line-height:62px;
+		line-height:57px;
 		span.fullstop {
 			color:$tertiary;
 		}
@@ -174,5 +178,42 @@ span.divider{
 		a:link,
 		a:visited { color: $primary; }
 		a:hover { color: $secondary; }	
+	}
+	p.closer{
+		line-height:50px;
+	}
+}
+.page#contact{
+	min-height: 0px;	
+	height:0px;
+	@include transition-property(width);
+    @include transition-duration(2s);
+  	@include transition-timing-function(ease-in);
+  	.hidden{
+  		display:none;
+  	}
+  	height: 1000px; 
+}
+
+.page#contact.collapsed{
+	height:0px;
+}
+
+.page {
+	min-height: 700px;	
+
+	a,
+	a:link,
+	a:visited { color: $primary; }
+	a:hover { color: $secondary; }	
+}
+
+.section_title {
+	color: $primary;
+	font: 700 60px $family;
+	text-transform: uppercase;	
+	img {
+		float: left;
+		margin: 14px 20px 0 0;
 	}
 }
